<resources>
    <string name="app_name">Belens</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_camera">Camera</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <string name="upload_image_placeholder">Image Placeholder</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="proses">process</string>
    <string name="result">Hasil</string>
    <string name="choose_language">Choose Language</string>
    <string name="language_changed_to">Language changed to</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="tvlanguage">English</string>
    <string name="profile">Change Profile</string>
    <string name="logout">Logout</string>
    <string name="welcome">Hi, Welcome</string>
    <string name="searching">Search..</string>
    <string name="information">Breaking News</string>
    <string name="register">Don\'t have an account? Register Here</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="btnregister">Register</string>
    <string name="jdlregister">Register</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="tvscan">Scan Your Drink</string>
    <string name="change_photo">Change Photo</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="no_news_available">No News Available</string>
    <string name="achievement">Achievements</string>
    <string name="beginner">Beginner</string>
    <string name="early_intermediate">Early Intermediate</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="hi_user">Hi User</string>
    <string name="logout_confirmation_title">Logout Confirmation</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
<<<<<<< HEAD
    <string name="hai">Hi %1$s</string>
=======
>>>>>>> 2379228ff7336242025d01380fc1ca01d99e0781
</resources>