<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Foto Profil dari Database -->
        <ImageView
            android:id="@+id/ivProfilePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop" />

        <!-- Tombol untuk Mengubah Foto -->
        <Button
            android:id="@+id/btnChangePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            android:fontFamily="@font/outfitregular"
            android:layout_marginBottom="16dp" />

        <!-- Input Username -->
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:fontFamily="@font/outfitregular"
            android:layout_marginBottom="16dp" />

        <!-- Input Email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/outfitregular"
            android:layout_marginBottom="16dp" />

        <!-- Input Current Password -->
        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:fontFamily="@font/outfitregular"
            android:layout_marginBottom="16dp" />

        <!-- Input New Password -->
        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:fontFamily="@font/outfitregular"
            android:layout_marginBottom="16dp" />

        <!-- Tombol Simpan -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfitregular"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>
