<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.belensapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.belensapp.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.belensapp.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_to_resultFragment"
            app:destination="@id/navigation_result" />
        <!-- Tambahkan action ini -->
        <action
            android:id="@+id/action_navigation_history_to_detailHistoryFragment"
            app:destination="@id/detailHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.belensapp.ui.settings.SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_profileFragment"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_settingsFragment_self"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_settings"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.belensapp.ui.result.ResultFragment"
        android:label="@string/result"
        tools:layout="@layout/fragment_result" />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.belensapp.ui.profile.ProfileFragment"
        android:label="ProfileFragment"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/detailHistoryFragment"
        android:name="com.example.belensapp.ui.history.DetailHistoryFragment"
        android:label="DetailHistoryFragment"
        tools:layout="@layout/fragment_detail_history">
        <argument
            android:name="predict_response"
            app:argType="com.example.belensapp.api.PredictResponse" />
    </fragment>


</navigation>