<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivImagePreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/upload_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/login_light"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"/>

    <ImageView
        android:id="@+id/ivImagePreviewNight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/upload_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/login_dark"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="32dp"
            android:elevation="8dp">

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="30sp"
                android:textColor="@color/red_gradient_end"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/outfitbold"/>

            <!-- Ubah dari etUsername menjadi etEmail -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="382dp"
                android:layout_height="72dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/outfitregular"
                android:hint="@string/email" />

            <!-- Menggunakan RelativeLayout untuk etPassword dan ImageButton -->
            <RelativeLayout
                android:layout_width="382dp"
                android:layout_height="72dp"
                android:layout_marginBottom="30dp">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:fontFamily="@font/outfitregular" />

                <ImageButton
                    android:id="@+id/btnPasswordVisibility"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                android:background="@null"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_visibility_off" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_gradient"
                android:fontFamily="@font/outfitregular"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="14sp"
                android:fontFamily="@font/outfitregular"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
