<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <!-- ProgressBar untuk menunjukkan loading -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="10dp"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/red_one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- FrameLayout untuk berada di atas TextView -->
    <FrameLayout
        android:id="@+id/frameAboveTitle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="4:3"
        android:elevation="4dp" />

    <!-- Judul Scan Gambarmu -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvscan"
        android:fontFamily="@font/outfitbold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red_one"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@id/frameAboveTitle"/>

    <!-- CardView untuk Menampilkan Preview Gambar dengan MaterialCardView -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/placeholderContainer"
        android:layout_width="363dp"
        android:layout_height="395dp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <ImageView
            android:id="@+id/ivImagePreview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/upload_photo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camerafill" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Tombol-tombol -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/placeholderContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTakePhoto"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/take_photo"
            app:icon="@drawable/camera_24"
            app:iconPadding="8dp"
            app:cornerRadius="20dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/outfitregular"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUploadPhoto"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/upload_photo"
            app:icon="@drawable/insert_photo_24"
            app:iconPadding="8dp"
            app:cornerRadius="20dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/outfitregular"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <!-- Tombol Proses -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProcess"
        android:layout_width="358dp"
        android:layout_height="60dp"
        app:cornerRadius="20dp"
        android:text="@string/proses"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/buttonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/outfitregular"
        app:layout_constraintWidth_percent="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>