<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="10dp"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/red_one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/noDataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_news_available"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Header: Profil dan Selamat Datang -->
    <LinearLayout
        android:id="@+id/header_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Gambar Profil -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_background"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <!-- Teks Selamat Datang -->
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_user"
            android:textColor="@color/red_one"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/outfitregular"
            android:textStyle="bold" />


    </LinearLayout>

    <!-- Search Bar -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/header_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

            <!-- EditText untuk input -->
            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="Search news by title"
                android:iconifiedByDefault="false"
                />


    </com.google.android.material.card.MaterialCardView>

    <!-- Judul Informasi -->
    <TextView
        android:id="@+id/info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="20sp"
        android:textColor="@color/red_one"
        android:fontFamily="@font/outfitregular"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/search_card"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- RecyclerView untuk Informasi -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/outfitregular"
        app:layout_constraintTop_toBottomOf="@id/info_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
